###############################
# Veränderungen von kivitendo #
###############################

2016-05-xx - Release 3.4.1

einere neue Features und Detailverbesserungen:

  - Auftrag um Druckvariante Gelangensbestätigung erweitert.




2016-03-12 - Release 3.4.0

Größere neue Features:

- Massenkonvertierung von Lieferscheinen nach Rechnung mit direktem Ausdruck (optional)

  Die manuelle Umwandlung von Lieferscheinen zu Rechnungen stößt bei größeren Daten-
  mengen an die Grenze der Anwendergeduld. Entsprechend können Lieferschein-Objekte
  direkt in Rechnungsobjekte gewandelt und zum Drucker geschickt werden. Die Ab-
  arbeitung erfolgt als Hintergrund-Job mit Status-Information (alle 5 sek) an den
  Benutzer. Auf der aktuellen Testumgebung (8000 bogomips) konnten hier 440 Objekte
  in 2 Minuten gewandelt und in weiteren 5 Minuten als PDF erzeugt werden. Die Rechnungen
  werden auch entsprechend im WebDAV archiviert, falls diese Option mandantenseitig
  eingestellt ist.

- E-Mail-Journal

  Alle aus kivitendo verschickten E-Mails werden in einem Journal
  gespeichert und können von Benutzern später erneut eingesehen
  werden. Dabei wird auch der Versandstatus (erfolgreich/
  fehlgeschlagen) hinterlegt. Anhänge können erneut heruntergeladen
  werden.

  Administratoren (Recht »config«) können dabei alle verschickten
  E-Mails einsehen, normale BenutzerInnen hingegen nur die von ihnen
  selber verschickten.

- Lieferwertbericht

  Bei offenen Aufträgen genauer anzeigen, welche Stand die Einzelpositionen aktuell haben.
  Details:
  Auftragspositionen werden mit Lieferscheinen ausgeliefert. Lieferscheine können
  prinzipiell drei Status haben: Offen, geliefert und / oder geschlossen. Für diese drei Fälle
  wird im Bericht die  Warenbewegungen eindeutig über die Verknüpfung von Auftragsposition
  zu Lieferscheinposition mitverfolgt. Ferner wird der Nettowarenwert für den Fall
  Hauptwährung und Netto-Auftrag berechnet.

Debitorenbuchungsimport
