@@ -7,8 +7,9 @@
 einere neue Features und Detailverbesserungen:
 
   - Auftrag um Druckvariante Gelangensbestätigung erweitert.
-
-
+  - Beim Speichern und Drucken von Briefen werden diese im
+    WebDAV-Verzeichnis gespeichert, sofern das Feature in der
+    Mandantenkonfiguration aktiv ist.
 
 
 2016-03-12 - Release 3.4.0
